--- a/style.css
+++ b/style.css
@@ -19,6 +19,67 @@ body {
   margin: 0;
 }
 
-h1 {
+h1, h2 {
   font-family: 'DINPro', sans-serif;
+}
+
+/* Navbar */
+
+.icon-search {
+  background: url('/icons/search-outline.svg');
+  height: 20px;
+  width: 20px;
+  display: block;
+}
+
+/* Banner */
+
+.carousel-indicators li {
+  height: 10px!important;
+  width: 10px!important;
+  border-radius: 50%;
+  background-color: var(--secondaryColor)!important;;
+}
+
+.carousel-inner { 
+  padding-bottom: 100px!important; 
+}
+
+.carousel-caption { 
+  bottom: -100px!important; 
+}
+
+/* News & Events */
+
+.news-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+  z-index: 0;
+}
+
+.news-container img {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+}
+
+/* Channel */
+.channel img {
+  width: 100%;
+  object-fit: cover;
+}
+
+/* Footer */
+.icon-facebook {
+  background: url('/icons/facebook-outline-white.svg');
+  height: 30px;
+  width: 30px;
+  display: block;
+}
+.icon-twitter {
+  background: url('/icons/twitter-outline-white.svg');
+  height: 30px;
+  width: 30px;
+  display: block;
 }
