--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   margin: 0;
 }
 
-h1, h2, h5, p {
+h1, h2, h4, h5, p {
   font-family: 'DINPro', sans-serif;
 }
 
@@ -47,20 +47,17 @@ h1, h2, h5, p {
 
 /* Banner */
 
+.carousel-indicators {
+  
+}
 .carousel-indicators li {
-  height: 13px!important;
-  width: 13px!important;
+  height: 14px!important;
+  width: 14px!important;
   border-radius: 50%;
   background-color: var(--secondaryColor)!important;
 }
-
-.carousel-indicators li::active {
-  background-color: red!important;
-}
-
 .carousel-inner { 
   padding-bottom: 100px!important;
- 
 }
 
 .carousel-caption {
@@ -81,6 +78,14 @@ h1, h2, h5, p {
 .news-container img {
   width: 100%;
   object-fit: cover;
+}
+
+.news-card:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.icon-arrow {
+  width: 25px;
 }
 
 /* Channel */
