--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ h1, h2, h4, h5, p {
   width: 25px;
 }
 
+#bootstrap-overrides #search-input {
+  display: none;
+}
+
 .navbar-nav {
   text-align: end;
 }
