--- a/style.css
+++ b/style.css
@@ -29,29 +29,198 @@ h1, h2, h4, h5, p {
 
 .icon-search {
   background: url('/icons/search-outline.svg');
-  height: 20px;
-  width: 20px;
+  height: 30px;
+  width: 30px;
   display: block;
 }
 
-#bootstrap-overrides .navbar-toggler {
-  border: none;
+.form-inline {
+  position: relative;
+  right: 50px;
 }
 
 
-#bootstrap-overrides .navbar-toggler-icon {
-  background: url('/icons/menu-outline.svg');
-  width: 25px;
+.overlay {
+  z-index: 9;
+  width: 100vw;
+  height:0vh;
+  background-color: var(--primaryColor);
+  transform:  translateY(-100vw);
+}  
+
+.overlay-slide-right {
+  transition: all 0.4s ease-in-out;
+  transform: translateY(0);
 }
 
-
-
-#search-input {
-  display: none;
+.overlay-slide-left {
+  transition: all 0.8s ease-in-out;
+  transform: translateY(-100vw);
 }
+
+nav,
+nav ul {
+  height: 45vh;
+  margin: 0;
+  padding: 0;
+  background-color: var(--primaryColor);
+}
+
+nav ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex;
+  list-style: none;
+}
+
+nav ul li {
+  height: 20%;
+  overflow: hidden;
+}
+
+nav li a {
+  position: relative;
+  top: 25%;
+  color: var(--secondaryColor);
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  left: 0;
+}
+
+nav li a:hover {
+  color: var(--secondaryColor);
+}
+  
+
+
+/* SLide in animation with delay for each nav item */
+.slide-in-1 {
+  animation: slide-in 0.4s linear 0.2s both;
+}
+
+.slide-in-2 {
+  animation: slide-in 0.4s linear 0.4s both;
+}
+
+.slide-in-3 {
+  animation: slide-in 0.4s linear 0.6s both;
+}
+
+.slide-in-4 {
+  animation: slide-in 0.4s linear 0.8s both;
+}
+
+.slide-in-5 {
+  animation: slide-in 0.4s linear 1s both;
+}
+
+.slide-in-6 {
+  animation: slide-in 0.4s linear 1.2s both;
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateX(-100%);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+}
+
+.slide-out-1 {
+  animation: slide-out 0.3s linear 0.6s both;
+}
+
+.slide-out-2 {
+  animation: slide-out 0.3s linear 0.5s both;
+}
+
+.slide-out-3 {
+  animation: slide-out 0.3s linear 0.4s both;
+}
+
+.slide-out-4 {
+  animation: slide-out 0.3s linear 0.3s both;
+}
+
+.slide-out-5 {
+  animation: slide-out 0.3s linear 0.2s both;
+}
+
+.slide-out-6 {
+  animation: slide-out 0.3s linear 0.1s both;
+}
+
+@keyframes slide-out {
+  from {
+    transform: translateY(0);
+  }
+
+  to {
+    transform: translateY(-100%);
+  }
+}
+
+/* --- Menu Bars from W3 schools ------------------------------------ */
+  
+.menu-bars {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  z-index: 10;
+  display: inline;
+  cursor: pointer;
+}
+  
+.bar1,
+.bar2,
+.bar3 {
+  width: 30px;
+  height: 2px;
+  background-color: var(--secondaryColor);
+  margin: 8px 0;
+  transition: 0.4s;
+}
+  
+ /* Rotate first bar */
+.change .bar1 {
+  transform: rotate(-45deg) translate(-7px, 8px);
+}
+  
+/* Fade out the second bar */
+.change .bar2 {
+  opacity: 0;
+}
+  
+/* Rotate last bar */
+.change .bar3 {
+  transform: rotate(45deg) translate(-6px, -8px);
+}
+  
+/* --- Sections ------------------------------------ */
+  
+section {
+  width: 100%;
+  height: 25%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  color: var(--secondaryColor);
+}
+
 
 /* Banner */
 /* Slideshow container */
+
+#bootstrap-overrides .carousel{
+  z-index: -1;
+ }
+
+
 #bootstrap-overrides .carousel-indicators li{
   background-color: red;
   height:14px;
@@ -149,4 +318,14 @@ h1, h2, h4, h5, p {
   #bootstrap-overrides .carousel-indicators {
     display: none;
    }
+
+   section#home a {
+    top: 1rem;
+    left: 1rem;
+  }
+  
+  .menu-bars {
+    top: 0.5rem;
+    right: 1rem;
+ }
 }
